--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,24 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/NewResourceTile.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/player.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/map.tscn", "res://Scenes/NewResourceTile.tscn")
+open_scenes=PackedStringArray("res://Scenes/map.tscn", "res://Scenes/NewResourceTile.tscn", "res://Scenes/player.tscn")
 current_scene="res://Scenes/map.tscn"
-center_split_offset=0
+center_split_offset=-480
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/new_resource_comp.gd"]
+open_scripts=["res://Scripts/CharacterBody2D.gd", "res://Scripts/new_resource_comp.gd"]
 selected_script="res://Scripts/new_resource_comp.gd"
 open_help=[]
 script_split_offset=70
