--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -5,9 +5,23 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 28,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 134,
 "row": 20,
-"scroll_position": 8.0,
+"scroll_position": 20.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CharacterBody2D.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
